--- a/conflict_neg.bib
+++ b/conflict_neg.bib
@@ -381,3 +381,32 @@
 	year = {2004},
 	keywords = {Interpersonal conflict, Problem solving, Psychological aspects, Social conflict},
 }
+
+@article{curhan_what_2006,
+	title = {What do people value when they negotiate? {Mapping} the domain of subjective value in negotiation.},
+	volume = {91},
+	issn = {1939-1315, 0022-3514},
+	shorttitle = {What do people value when they negotiate?},
+	url = {https://doi.apa.org/doi/10.1037/0022-3514.91.3.493},
+	doi = {10.1037/0022-3514.91.3.493},
+	language = {en},
+	number = {3},
+	urldate = {2024-07-24},
+	journal = {Journal of Personality and Social Psychology},
+	author = {Curhan, Jared R. and Elfenbein, Hillary Anger and Xu, Heng},
+	month = sep,
+	year = {2006},
+	pages = {493--512},
+	file = {Submitted Version:C\:\\Users\\Usuario\\Zotero\\storage\\KD9QUYLQ\\Curhan et al. - 2006 - What do people value when they negotiate Mapping .pdf:application/pdf},
+}
+
+@book{greenhalgh_managing_2001,
+	address = {New York},
+	title = {Managing strategic relationships: the key to business success},
+	isbn = {978-0-684-86769-4},
+	shorttitle = {Managing strategic relationships},
+	publisher = {Free Press},
+	author = {Greenhalgh, Leonard},
+	year = {2001},
+	keywords = {Business networks, Decision making, Strategic alliances (Business), Success in business},
+}
