--- a/002_stra_tac_distri.qmd
+++ b/002_stra_tac_distri.qmd
@@ -1,93 +1,92 @@
 ---
-title: "Strategy and Tactics of Distributive Bargaining"
-author: "Luis Francisco Gomez Lopez"
-date: 2024-01-27
-execute: 
-  echo: false
-  warning: false
-format:
+title: Strategy and Tactics of Distributive Bargaining
+author: 
+  - Luis Francisco Gómez López
+institute: 
+  - FAEDIS
+date: last-modified
+format: 
   beamer:
     colortheme: dolphin
     fonttheme: structurebold
     theme: AnnArbor
     link-citations: true
-    linkcolor: blue
-    fig-align: center
+    colorlinks: true
+    toc: true
+    slide-level: 2
+    section-titles: false
+    keep-tex: true
     include-in-header:
-      - text: |
-          \usepackage{booktabs}
-          \usepackage{longtable}
-          \usepackage{array}
-          \usepackage{multirow}
-          \usepackage{wrapfig}
-          \usepackage{float}
-          \usepackage{colortbl}
-          \usepackage{pdflscape}
-          \usepackage{tabu}
-          \usepackage{threeparttable}
-          \usepackage{threeparttablex}
-          \usepackage[normalem]{ulem}
-          \usepackage{makecell}
-          \usepackage{xcolor}
-          \usepackage{fontawesome5}
+      file: 000_tex_files/preamble.tex
+fig-cap-location: bottom
+tbl-cap-location: top
+knitr: 
+  opts_chunk: 
+    echo: false
+    warning: false
+    fig-align: center
+    out-width: 85%
+lang: en
 bibliography: conflict_neg.bib
 ---
 
-```{r libraries}
+```{r}
+#| label: libraries
+
 library(tidyverse)
 library(tidyquant)
 library(ggrepel)
-library(DiagrammeR)
+library(latex2exp)
 ```
-
-# Contents
-
-- Please Read Me
-- Purpose
-- Elements of a distributive negotiation situation
-- Strategies
-- Tactics
-- Aspects about taking positions during a negotiation
-- Closing a deal
-- How to face hardball tactics?
-- Acknowledgments
-- References
 
 # Please Read Me
 
-- Check the message __Welcome greeting__ published in the News Bulletin Board.
+##
 
-- Dear student please edit your profile uploading a photo where your face is clearly visible.
+-   Check the message **Welcome greeting** published in the News Bulletin Board.
 
-- The purpose of the virtual meetings is to answer questions and not to make a summary of the study material.
+-   Dear student please edit your profile uploading a photo where your face is clearly visible.
 
-- This presentation is based on [@lewicki_essentials_2016, Chapter 2]
+-   The purpose of the virtual meetings is to answer questions and not to make a summary of the study material.
+
+-   This presentation is based on [@lewicki_negociacion_2024, Chapter 2]
 
 # Purpose
+
+##
 
 Understand the basic elements of a distributive negotiation situation, as well as the strategies and tactics that can be applied in this context.
 
 # Elements of a distributive negotiation situation
 
+##
+
+```{=tex}
 \definecolor{red}{RGB}{227, 26, 28}
 \definecolor{blue}{RGB}{44, 62, 80}
+```
 
-- Buyer: Jackson (\textcolor{blue}{J}) and Seller: Sofia (\textcolor{red}{S})[^1]
+-   Buyer: Jackson ($\color{blue}{J}$) and Seller: Sofia ($\color{red}{S}$)[^1]
 
-    + Resistance point \textcolor{blue}{J}, \textcolor{blue}{Rp\_J}: 150K USD
-    + Resistance point \textcolor{red}{S}, \textcolor{red}{Rp\_S}: 130K USD
+    -   Resistance point $\color{blue}{J}$, $\color{blue}{Rp_J}$: 150K USD
+    -   Resistance point $\color{red}{S}$, $\color{red}{Rp_S}$: 130K USD
 
-```{r }
+[^1]: Both $\color{blue}{J}$ and $\color{red}{S}$ have a common interest in cooperating but conflicting interests on how exactly to cooperate. For that reason a negotiation situation arises [@muthoo_bargaining_1999]
+
+```{r}
+#| label: fig-resistance-point
+#| fig-cap: Resistance points
 #| fig-height: 1.7
 #| fig-width: 4.5
+
 # Data
 dist_neg1 <- tibble(x            = c(130, 150),
                     y            = rep(x = 0, times = 2),
                     negotiator   = c("Sofia", "Jackson"),
-                    label_text   = c("Rp_S", "Rp_J"))
+                    label_text   = c(TeX(r"($Rp_S$)"), TeX(r"($Rp_J$)")))
 
 # Plot
-plot_dist_neg1 <- dist_neg1 %>% 
+plot_dist_neg1 <- dist_neg1 |> 
     ggplot() + 
     geom_segment(aes(x = 130, xend = 150, y = 0, yend = 0)) +
     geom_vline(aes(xintercept = x), 
@@ -97,12 +96,17 @@ plot_dist_neg1 <- dist_neg1 %>%
                size        = 5,
                color       = "black", 
                show.legend = FALSE) +
-    geom_label_repel(aes(x = x, y = y, label = label_text, fill = negotiator),
+    geom_label_repel(aes(x = x, y = y, 
+                         label = label_text, 
+                         fill = negotiator),
                      color       = "white",
                      alpha       = 0.9, 
+                     parse       = TRUE,
                      show.legend = FALSE) +
     scale_x_continuous(breaks = dist_neg1$x, 
-                       labels = scales::number_format(prefix = "$", suffix = "K", accuracy = 1)) +
+                       labels = scales::label_number(prefix = "$", 
+                                                     suffix = "K",
+                                                     accuracy = 1)) +
     scale_fill_tq() +
     theme(panel.border      = element_rect(fill = NA, color = "black"),
           plot.background   = element_rect(fill = "#f3fcfc"),
@@ -117,29 +121,33 @@ plot_dist_neg1 <- dist_neg1 %>%
 plot_dist_neg1 
 ```
 
-[^1]: Both \textcolor{blue}{J} and \textcolor{red}{S} have a common interest in cooperating but conflicting interests on how exactly to cooperate. For that reason a negotiation situation arises [@muthoo_bargaining_1999]
+##
 
-# Elements of a distributive negotiation situation
-
+```{=tex}
 \definecolor{red}{RGB}{227, 26, 28}
 \definecolor{blue}{RGB}{44, 62, 80}
+```
 
-- Buyer: Jackson (\textcolor{blue}{J}) and Seller: Sofia (\textcolor{red}{S})
+-   Buyer: Jackson ($\color{blue}{J}$) and Seller: Sofia ($\color{red}{S}$)
 
-    + Initial offer \textcolor{blue}{J}, \textcolor{blue}{Io\_J}: 133K USD
-    + Initial offer \textcolor{red}{S}, \textcolor{red}{Io\_S}: 145K USD
+    -   Initial offer $\color{blue}{J}$, $\color{blue}{Io_J}$: 133K USD
+    -   Initial offer $\color{red}{S}$, $\color{red}{Io_S}$: 145K USD
 
-```{r }
+```{r}
+#| label: fig-initial-offer
+#| fig-cap: Initial offers
 #| fig-height: 1.7
 #| fig-width: 4.5
+
 # Data
 dist_neg2 <- tibble(x            = c(130, 133, 145, 150),
                     y            = rep(x = 0, times = 4),
                     negotiator   = c("Sofia", "Jackson", "Sofia", "Jackson"),
-                    label_text   = c("Rp_S", "Io_J", "Io_S", "Rp_J"))
+                    label_text   = c(TeX(r"($Rp_S$)"),TeX(r"($Io_J$)"), 
+                                     TeX(r"($Io_S$)"), TeX(r"($Rp_J$)")))
 
 # Plot
-plot_dist_neg2 <- dist_neg2 %>% 
+plot_dist_neg2 <- dist_neg2 |> 
     ggplot() + 
     geom_segment(aes(x = 130, xend = 150, y = 0, yend = 0)) +
     geom_vline(aes(xintercept = x), 
@@ -149,12 +157,17 @@ plot_dist_neg2 <- dist_neg2 %>%
                size        = 5,
                color       = "black", 
                show.legend = FALSE) +
-    geom_label_repel(aes(x = x, y = y, label = label_text, fill = negotiator),
+    geom_label_repel(aes(x = x, y = y, 
+                         label = label_text, 
+                         fill = negotiator),
                      color       = "white",
-                     alpha       = 0.9, 
+                     alpha       = 0.9,
+                     parse       = TRUE,
                      show.legend = FALSE) +
     scale_x_continuous(breaks = dist_neg2$x, 
-                       labels = scales::number_format(prefix = "$", suffix = "K", accuracy = 1)) +
+                       labels = scales::label_number(prefix = "$", 
+                                                     suffix = "K", 
+                                                     accuracy = 1)) +
     scale_fill_tq() +
     theme(panel.border      = element_rect(fill = NA, color = "black"),
           plot.background   = element_rect(fill = "#f3fcfc"),
@@ -169,27 +182,35 @@ plot_dist_neg2 <- dist_neg2 %>%
 plot_dist_neg2 
 ```
 
-# Elements of a distributive negotiation situation
+##
 
+```{=tex}
 \definecolor{red}{RGB}{227, 26, 28}
 \definecolor{blue}{RGB}{44, 62, 80}
+```
 
-- Buyer: Jackson (\textcolor{blue}{J}) and Seller: Sofia (\textcolor{red}{S})
+-   Buyer: Jackson ($\color{blue}{J}$) and Seller: Sofia ($\color{red}{S}$)
 
-    + Target point \textcolor{blue}{J}, \textcolor{blue}{Tp\_J}: 135K USD
-    + Target point \textcolor{red}{S}, \textcolor{red}{Tp\_S}: 140K USD
+    -   Target point $\color{blue}{J}$, $\color{blue}{Tp_J}$: 135K USD
+    -   Target point $\color{red}{S}$, $\color{red}{Tp_S}$: 140K USD
 
-```{r }
+```{r}
+#| label: fig-target-point
+#| fig-cap: Target points
 #| fig-height: 1.7
 #| fig-width: 4.5
+
 # Data
 dist_neg3 <- tibble(x            = c(130, 133, 135, 140, 145, 150),
                     y            = rep(x = 0, times = 6),
                     negotiator   = c("Sofia", "Jackson", "Jackson", "Sofia", "Sofia", "Jackson"),
-                    label_text   = c("Rp_S", "Io_J", "Tp_J", "Tp_S", "Io_S", "Rp_J"))
+                    label_text   = c(TeX(r"($Rp_S$)"),TeX(r"($Io_J$)"),
+                                     TeX(r"($Tp_J$)"), 
+                                     TeX(r"($Tp_S$)"),TeX(r"($Io_S$)"), 
+                                     TeX(r"($Rp_J$)")))
 
 # Plot
-plot_dist_neg3 <- dist_neg3 %>% 
+plot_dist_neg3 <- dist_neg3 |> 
     ggplot() + 
     geom_segment(aes(x = 130, xend = 150, y = 0, yend = 0)) +
     geom_vline(aes(xintercept = x), 
@@ -199,12 +220,17 @@ plot_dist_neg3 <- dist_neg3 %>%
                size        = 5,
                color       = "black", 
                show.legend = FALSE) +
-    geom_label_repel(aes(x = x, y = y, label = label_text, fill = negotiator),
+    geom_label_repel(aes(x = x, y = y, 
+                         label = label_text, 
+                         fill = negotiator),
                      color       = "white",
                      alpha       = 0.9, 
+                     parse       = TRUE, 
                      show.legend = FALSE) +
     scale_x_continuous(breaks = dist_neg3$x, 
-                       labels = scales::number_format(prefix = "$", suffix = "K", accuracy = 1)) +
+                       labels = scales::label_number(prefix = "$", 
+                                                     suffix = "K", 
+                                                     accuracy = 1)) +
     scale_fill_tq() +
     theme(panel.border      = element_rect(fill = NA, color = "black"),
           plot.background   = element_rect(fill = "#f3fcfc"),
@@ -219,27 +245,35 @@ plot_dist_neg3 <- dist_neg3 %>%
 plot_dist_neg3
 ```
 
-# Elements of a distributive negotiation situation
+##
 
+```{=tex}
 \definecolor{red}{RGB}{227, 26, 28}
 \definecolor{blue}{RGB}{44, 62, 80}
+```
 
-- Buyer: Jackson (\textcolor{blue}{J}) and Seller: Sofia (\textcolor{red}{S})
+-   Buyer: Jackson ($\color{blue}{J}$) and Seller: Sofia ($\color{red}{S}$)
 
-    + BATNA \textcolor{blue}{J}, \textcolor{blue}{Tp\_J}: 142K USD
-    + BATNA \textcolor{red}{S}, \textcolor{red}{Tp\_S}: 134K USD
+    -   BATNA $\color{blue}{J}$, $\color{blue}{BATNA_J}$: 142K USD
+    -   BATNA $\color{red}{S}$, $\color{red}{BATNA_S}$: 134K USD
 
-```{r }
+```{r}
+#| label: fig-batna
+#| fig-cap: Best alternatives to a negotiated agreement 
 #| fig-height: 1.7
 #| fig-width: 4.5
 # Data
 dist_neg4 <- tibble(x            = c(130, 133, 134, 135, 140, 142, 145, 150),
                     y            = rep(x = 0, times = 8),
                     negotiator   = c("Sofia", "Jackson", "Sofia", "Jackson", "Sofia", "Jackson", "Sofia", "Jackson"),
-                    label_text   = c("Rp_S", "Io_J", "BATNA_S", "Tp_J", "Tp_S", "BATNA_J", "Io_S", "Rp_J"))
+                    label_text   = c(TeX(r"($Rp_S$)"),TeX(r"($Io_J$)"),
+                                     TeX(r"($BATNA_S$)"), TeX(r"($Tp_J$)"), 
+                                     TeX(r"($Tp_S$)"), TeX(r"($BATNA_J$)"),
+                                     TeX(r"($Io_S$)"), 
+                                     TeX(r"($Rp_J$)")))
 
 # Plot
-plot_dist_neg4 <- dist_neg4 %>% 
+plot_dist_neg4 <- dist_neg4 |> 
     ggplot() + 
     geom_segment(aes(x = 130, xend = 150, y = 0, yend = 0)) +
     geom_vline(aes(xintercept = x), 
@@ -249,12 +283,17 @@ plot_dist_neg4 <- dist_neg4 %>%
                size        = 5,
                color       = "black", 
                show.legend = FALSE) +
-    geom_label_repel(aes(x = x, y = y, label = label_text, fill = negotiator),
+    geom_label_repel(aes(x = x, y = y, 
+                         label = label_text, 
+                         fill = negotiator),
                      color       = "white",
-                     alpha       = 0.9, 
+                     alpha       = 0.9,
+                     parse       = TRUE,
                      show.legend = FALSE) +
     scale_x_continuous(breaks = dist_neg4$x, 
-                       labels = scales::number_format(prefix = "$", suffix = "K", accuracy = 1)) +
+                       labels = scales::label_number(prefix = "$", 
+                                                     suffix = "K", 
+                                                     accuracy = 1)) +
     scale_fill_tq() +
     theme(panel.border      = element_rect(fill = NA, color = "black"),
           plot.background   = element_rect(fill = "#f3fcfc"),
@@ -269,258 +308,368 @@ plot_dist_neg4 <- dist_neg4 %>%
 plot_dist_neg4
 ```
 
-# Elements of a distributive negotiation situation
+##
 
+```{=tex}
 \definecolor{red}{RGB}{227, 26, 28}
 \definecolor{blue}{RGB}{44, 62, 80}
+```
 
-- Buyer: Jackson (\textcolor{blue}{J}) and Seller: Sofia (\textcolor{red}{S})
+-   Buyer: Jackson ($\color{blue}{J}$) and Seller: Sofia ($\color{red}{S}$)
 
-    + Bargaining range[^2]: $[\text{\$130K},\text{\$150K}]$
-    
-        + Is the result of $[\text{\$130K}, \infty) \cap [0, \text{\$150K}]$
-        + If the bargaining range is $\neq \emptyset$, $\text{Rp\_S} \leq \text{BATNA\_J}$ and $\text{BATNA\_S} \leq \text{Rp\_J}$ then an aggrement between \textcolor{blue}{J} and \textcolor{red}{S} is possible
-    
+    -   Bargaining range[^2]: $[\text{\$130K},\text{\$150K}]$
+
+        -   Is the result of $[\text{\$130K}, \infty) \cap [0, \text{\$150K}]$
+        -   If the bargaining range is $\neq \emptyset$, $Rp_S \leq BATNA_J$ and $BATNA_S \leq Rp_J$ then an aggrement between $\color{blue}{J}$ and $\color{red}{S}$ is possible
+
 [^2]: Also known as settlement range or zone of potential agreement
 
-```{r }
+```{r}
+#| label: fig-bargaining-range
+#| fig-cap: Bargaining range 
 #| fig-height: 1.7
 #| fig-width: 4.5
+
 plot_dist_neg4
 ```
 
-# Elements of a distributive negotiation situation
+##
 
+```{=tex}
 \definecolor{red}{RGB}{227, 26, 28}
 \definecolor{blue}{RGB}{44, 62, 80}
+```
 
-- Buyer: Jackson (\textcolor{blue}{J}) and Seller: Sofia (\textcolor{red}{S})
+-   Buyer: Jackson ($\color{blue}{J}$) and Seller: Sofia ($\color{red}{S}$)
 
-    + In this example the settlement point $\in [\text{Tp\_J}, \text{Tp\_S}] = [\text{\$135K}, \text{\$140K}]$
+    -   In this example the settlement point $\in [Tp_J, Tp_S] = [\text{\$135K}, \text{\$140K}]$
 
-```{r }
+```{r}
+#| label: fig-settlement-point
+#| fig-cap: Possible values for a settlement point 
 #| fig-height: 1.7
 #| fig-width: 4.5
+
 plot_dist_neg4
 ```
 
-# Elements of a distributive negotiation situation
+##
 
+```{=tex}
 \definecolor{red}{RGB}{227, 26, 28}
 \definecolor{blue}{RGB}{44, 62, 80}
+```
 
-- In the case of a distributive negotiation, it is most likely that the settlement point does not correspond to the target points of the participants in the negotiation.
+-   In the case of a distributive negotiation, it is most likely that the settlement point does not correspond to the target points of the participants in the negotiation.
 
-- In the example of \textcolor{blue}{J} and \textcolor{red}{S} it was implicitly assumed that the negotiation element was the price. This element is known as a __bargaining mix__[^3] where it does not necessarily have to be a single element.
+-   In the example of $\color{blue}{J}$ and $\color{red}{S}$ it was implicitly assumed that the negotiation element was the price. This element is known as a **bargaining mix**[^3] where it does not necessarily have to be a single element.
 
-    + For example \textcolor{blue}{J} and \textcolor{red}{S} also can include in the bargaining mix the final date of the sale, whether or not renovations are included or if other items such as furniture and household appliances are added. 
+    -   For example $\color{blue}{J}$ and $\color{red}{S}$ also can include in the bargaining mix the final date of the sale, whether or not renovations are included or if other items such as furniture and household appliances are added.
 
 [^3]: It is define as the set of issues that will be negotiated
 
-# Strategies[^4]
+# Strategies
 
-```{r }
-#| out-width: 90%
-#| fig-align: center
+##
 
-grViz("
+```{dot}
+//| label: fig-strategies-distributive-bargaining
+//| fig-cap: Strategies distributive bargaining [@lewicki_negociacion_2024, pp. 39-41]
+//| fig-width: 5.5
+//| fig-height: 2.5
+
 digraph boxes_and_circles {
 
   graph [rankdir = LR]
 
-  node [shape = circle, color = '#2C3E50']
+  node [shape = circle, color = "#2C3E50"]
  
-  'Strategies';
+  "Strategies";
 
-  node [shape = oval, color = '#E31A1C']
+  node [shape = oval, color = "#E31A1C"]
 
-  'Discover\nor\nestimate\nthe\nresistance point';
-  'Influence\nthe\nresistance point\nof the\ncounterpart';
+  "Discover\nor\nestimate\nthe\nresistance point";
+  "Influence\nthe\nresistance point\nof the\ncounterpart";
   
-  node [shape = oval, color = '#18BC9C']
+  node [shape = oval, color = "#18BC9C"]
   
-  '4 major\npropositions';
+  "4 major\npropositions";
   
-  'Strategies' -> 'Discover\nor\nestimate\nthe\nresistance point';
-  'Strategies' -> 'Influence\nthe\nresistance point\nof the\ncounterpart';
+  "Strategies" -> "Discover\nor\nestimate\nthe\nresistance point";
+  "Strategies" -> "Influence\nthe\nresistance point\nof the\ncounterpart";
   
-  'Influence\nthe\nresistance point\nof the\ncounterpart' -> '4 major\npropositions';
+  "Influence\nthe\nresistance point\nof the\ncounterpart" -> "4 major\npropositions";
   
 }
-")
 ```
 
-[^4]: Check out [@lewicki_essentials_2016, Chapter 2, p 33-35]
+# Tactics
 
-# Tactics[^5]
+##
 
-```{r }
-#| out-width: 90%
-#| fig-align: center
+```{dot}
+//| label: fig-tactics-distributive-bargaining-1
+//| fig-cap: Tactics distributive bargaining [@lewicki_negociacion_2024, pp. 42-48]
+//| fig-width: 4.5
+//| fig-height: 2.5
 
-grViz("
 digraph boxes_and_circles {
 
   graph [rankdir = LR]
 
-  node [shape = circle, color = '#2C3E50']
+  node [shape = circle, color = "#2C3E50"]
  
-  'Tactics';
+  "Tactics";
 
-  node [shape = circle, color = '#E31A1C']
+  node [shape = circle, color = "#E31A1C"]
 
-  'Estimation';
-  'Control\ninformation\nsend';
+  "Assess the other\nparty's";
+  "Manage the other\nparty's impressions";
   
-  node [shape = oval, color = '#18BC9C']
+  node [shape = oval, color = "#18BC9C"]
+
+  "Indirect\nassessment";
+  "Direct\nassessment";
   
-  'Target\npoints';
-  'Resistance\npoints';
-  'Costs of\nending\nthe negotiation';
-  'Target and settlement\npoints';
+  "Screening\nactivities";
+  "Direct action to\nalter impressions";
   
-  node [shape = oval, color = '#CCBE93']
+  node [shape = oval, color = "#CCBE93"]
   
-  'Direct\nassessment';
-  'Indirect\nassessment';
-  'Screening\nactivities';
-  'Direct action or\nalter impressions';
+  "Target\npoints";
+  "Resistance\npoints";
+  "Costs of\nending\nthe negotiation";
   
-  'Tactics' -> 'Estimation';
-  'Tactics' -> 'Control\ninformation\nsend';
+  "Tactics" -> "Assess the other\nparty's";
+  "Tactics" -> "Manage the other\nparty's impressions";
   
-  'Control\ninformation\nsend' -> 'Target and settlement\npoints';
+  "Assess the other\nparty's" -> "Indirect\nassessment";
+  "Assess the other\nparty's" -> "Direct\nassessment";
+  "Manage the other\nparty's impressions" -> "Screening\nactivities";
+  "Manage the other\nparty's impressions" -> "Direct action to\nalter impressions";
   
-  'Estimation' -> 'Target\npoints';
-  'Estimation' -> 'Resistance\npoints';
-  'Estimation' -> 'Costs of\nending\nthe negotiation';
+  "Indirect\nassessment" -> "Target\npoints";
+  "Indirect\nassessment" -> "Resistance\npoints";
+  "Indirect\nassessment" -> "Costs of\nending\nthe negotiation";
+  "Direct\nassessment" -> "Target\npoints";
+  "Direct\nassessment" -> "Resistance\npoints";
+  "Direct\nassessment" -> "Costs of\nending\nthe negotiation";
   
-  'Target\npoints' -> 'Direct\nassessment';
-  'Resistance\npoints' -> 'Direct\nassessment';
-  'Costs of\nending\nthe negotiation' -> 'Direct\nassessment';
-  'Target\npoints' -> 'Indirect\nassessment';
-  'Resistance\npoints' -> 'Indirect\nassessment';
-  'Costs of\nending\nthe negotiation' -> 'Indirect\nassessment';
-  'Target and settlement\npoints' -> 'Screening\nactivities';
-  'Target and settlement\npoints' -> 'Direct action or\nalter impressions';
+  "Screening\nactivities" -> "Target\npoints";
+  "Screening\nactivities" -> "Resistance\npoints";
+  "Screening\nactivities" -> "Costs of\nending\nthe negotiation";
+  "Direct action to\nalter impressions" -> "Target\npoints";
+  "Direct action to\nalter impressions" -> "Resistance\npoints";
+  "Direct action to\nalter impressions" -> "Costs of\nending\nthe negotiation";
+  
 }
-")
 ```
 
-[^5]: Check out [@lewicki_essentials_2016, Chapter 2, p 36-42]
+##
 
-# Tactics[^6]
+```{dot}
+//| label: fig-tactics-distributive-bargaining-2
+//| fig-cap: Tactics distributive bargaining [@lewicki_negociacion_2024, pp. 42-48]
+//| fig-width: 4.5
+//| fig-height: 2.5
 
-```{r }
-#| out-width: 90%
-#| fig-align: center
-
-grViz("
 digraph boxes_and_circles {
 
   graph [rankdir = LR]
 
-  node [shape = circle, color = '#2C3E50']
+  node [shape = circle, color = "#2C3E50"]
  
-  'Tactics';
+  "Tactics";
 
-  node [shape = circle, color = '#E31A1C']
+  node [shape = circle, color = "#E31A1C"]
 
-  'Modify the\nperception';
-  'Increase the costs\nof delaying negotiations';
+  "Modify the\nperception";
+  "Increase the costs\nof delaying negotiations";
   
-  node [shape = oval, color = '#18BC9C']
+  node [shape = oval, color = "#18BC9C"]
   
-  'Target\npoints';
-  'Resistance\npoints';
-  'Costs of\nending\nthe negotiation';
+  "Alter the impressions\nof the counterpart";
+  "Make demands and\npositions appear\nmore or less unattractive";
+  "Disruptive action";
+  "Alliance with outsiders";
+  "Schedule manipulation";
   
-  node [shape = oval, color = '#CCBE93']
+  node [shape = oval, color = "#CCBE93"]
   
-  'Alter the impressions\nof the counterpart';
-  'Make demands and\npositions appear\nmore or less unattractive';
-  'Disruptive action';
-  'Alliance with outsiders';
-  'Schedule manipulation';
+  "Target\npoints";
+  "Resistance\npoints";
+  "Costs of\nending\nthe negotiation";
   
-  'Tactics' -> 'Modify the\nperception';
-  'Tactics' -> 'Increase the costs\nof delaying negotiations';
+  "Tactics" -> "Modify the\nperception";
+  "Tactics" -> "Increase the costs\nof delaying negotiations";
   
-  'Modify the\nperception' -> 'Target\npoints';
-  'Modify the\nperception' -> 'Resistance\npoints';
-  'Modify the\nperception' -> 'Costs of\nending\nthe negotiation';
-  
-  'Target\npoints' -> 'Alter the impressions\nof the counterpart';
-  'Resistance\npoints' -> 'Alter the impressions\nof the counterpart';
-  'Costs of\nending\nthe negotiation' -> 'Alter the impressions\nof the counterpart';
-  'Target\npoints' -> 'Make demands and\npositions appear\nmore or less unattractive';
-  'Resistance\npoints' -> 'Make demands and\npositions appear\nmore or less unattractive';
-  'Costs of\nending\nthe negotiation' -> 'Make demands and\npositions appear\nmore or less unattractive';
-  'Increase the costs\nof delaying negotiations' -> 'Disruptive action';
-  'Increase the costs\nof delaying negotiations' -> 'Alliance with outsiders';
-  'Increase the costs\nof delaying negotiations' -> 'Schedule manipulation';
+  "Modify the\nperception" -> "Alter the impressions\nof the counterpart";
+  "Modify the\nperception" -> "Make demands and\npositions appear\nmore or less unattractive";
+  "Increase the costs\nof delaying negotiations" -> "Disruptive action";
+  "Increase the costs\nof delaying negotiations" -> "Alliance with outsiders";
+  "Increase the costs\nof delaying negotiations" -> "Schedule manipulation";
+
+  "Alter the impressions\nof the counterpart" -> "Target\npoints";
+  "Alter the impressions\nof the counterpart" -> "Resistance\npoints";
+  "Alter the impressions\nof the counterpart" -> "Costs of\nending\nthe negotiation";
+  "Make demands and\npositions appear\nmore or less unattractive" -> "Target\npoints";
+  "Make demands and\npositions appear\nmore or less unattractive" -> "Resistance\npoints";
+  "Make demands and\npositions appear\nmore or less unattractive" -> "Costs of\nending\nthe negotiation";
   
 }
-")
 ```
-
-[^6]: Check out [@lewicki_essentials_2016, Chapter 2, p 36-42]
 
 # Aspects about taking positions during a negotiation
 
-- In [@lewicki_essentials_2016, Chapter 2, p 43-49] the recommended positions to be taken with regard to the following elements are pointed out:
+##
 
-    + __Opening offers__
-    
-        + What should be the initial offer?
-        + Should the initial offer be near or far from our own resistance point?
-        
-    + __Opening stance__
-    
-        + Should a moderate or aggressive stance be taken?
-        
-    + __Initial concessions__
-    
-        + How wide should the initial concession be?
+-   In [@lewicki_negociacion_2024, Chapter 2, p 48-55] the recommended positions to be taken with regard to the following elements are pointed out:
 
-    + __Final offer__
+    -   **Opening offers**
+
+        -   Who should make the first offer?
+        -   What should be the initial offer?
+        -   Should the offer be perceived as low, moderate or high by the other party?
+        -   Should the initial offer be near or far from our own resistance point?
+
+    -   **Opening stance**
+
+        -   Should a moderate or aggressive stance be taken?
+
+    -   **Initial concessions**
+
+        -   How wide should the initial concession be?
+
+    -   **Final offer**
+
+        -   How to communicate that a particular offer is a final offer?
+
+# Commitments
+
+##
+
+-  **Commitment** means taking a stance in a negotiation and making a explicit or implicit promise about future actions.
+
+    -  A commitment is a way to create a bargaining position by specifying a future action if a position is not reached.
     
-        + How to communicate that a particular offer is a final offer?
+    -  A commitment aims to clarify the negotiator's planned actions and eliminate any uncertainty about their intentions.
+    
+        -  However, they may also fix a negotiator to a particular position [@lewicki_negociacion_2024, Chapter 2, p 56]
+        -  That is why when making commitments, one should also make contingency plans for a graceful exit if needed
         
+        -  Also it is important to point out that good, sound and deliberate commitments take time to establish so it is important to don't commit prematurely [@lewicki_negociacion_2024, Chapter 2, p 56]
+        
+##        
+
+```{dot}
+//| label: fig-ways-to-abandon-committed-position
+//| fig-cap: Ways to abandon a committed position [@lewicki_negociacion_2024, pp. 58-59]
+//| fig-width: 4.5
+//| fig-height: 2.5
+
+digraph boxes_and_circles {
+
+  graph [rankdir = TB]
+
+  node [shape = circle, color = "#2C3E50"]
+ 
+  "Ways to Abandon a\nCommitted Position";
+
+  node [shape = circle, color = "#E31A1C"]
+
+  "Plan a way out";
+  "Let it die silently";
+  "Restate the Commitment";
+  "Minimize the Damage";
+  
+  "Ways to Abandon a\nCommitted Position" -> "Plan a way out";
+  "Ways to Abandon a\nCommitted Position" -> "Let it die silently";
+  "Ways to Abandon a\nCommitted Position" -> "Restate the Commitment";
+  "Ways to Abandon a\nCommitted Position" -> "Minimize the Damage";
+  
+}
+```
+
 # Closing a deal
 
-- The negotiations seek to reach an agreement if possible[^7]. In order to achieve that goal with a greater probability, the following practices are recommended based on what is pointed out in [@lewicki_essentials_2016, Chapter 2, p 49-50]:
+##
 
-    + Offer similar options to the other parties to make the negotiation more flexible.
-    
-    + Assume a closing technique or stance.
-    
-    + Split the difference when a __mutual adjustment__ process has been carried out.
-    
-    + Use __exploding offers__ that refers to setting a deadline where a specific proposal is in force for a limited time.
-    
-    + Use __sweeteners__ that refers to granting special concessions before closing.
+-   The negotiations seek to reach an agreement if possible[^4]. In order to achieve that goal with a greater probability, the following practices are recommended based on what is pointed out in [@lewicki_negociacion_2024, Chapter 2, p 59-60]:
 
-[^7]: Remember that negotiation as a form of decision making is not the only method that exists!
+    -   Offer similar options to the other parties to make the negotiation more flexible.
+
+    -   Assume a closing technique or stance.
+
+    -   Split the difference when a **mutual adjustment** process has been carried out.
+
+    -   Use **exploding offers** that refers to setting a deadline where a specific proposal is in force for a limited time.
+
+    -   Use **sweeteners** that refers to granting special concessions before closing.
+
+[^4]: Remember that negotiation as a form of decision making is not the only method that exists!
 
 # How to face hardball tactics?
 
-- Sometimes in negotiations people use __hardball tactics__. In general in [@lewicki_essentials_2016, Chapter 2, p 50] the authors recommend not to use them as they cause damage in the negotiation process. However, it is important to know them and know how to deal with them.
+##
 
-- The most common __hardball tactics__ are pointed out in [@lewicki_essentials_2016, Chapter 2, p 52-58]: Good Cop/Bad Cop, Lowball/Highball, Bogey, Nibble, Chicken, Intimidation, Aggressive Behavior and Snow Job.
+-   Sometimes in negotiations people use **hardball tactics**. In general in [@lewicki_negociacion_2024, Chapter 2, p 61] the authors recommend not to use them as they cause damage in the negotiation process. However, it is important to know them and know how to deal with them.
 
-- In [@lewicki_essentials_2016, Chapter 2, p 51] 4 possible strategies to face these tactics are pointed out: discuss them, ignore them, respond in kind and co-opt the other party.
+-   In [@lewicki_negociacion_2024, Chapter 2, pp 61-62] 4 possible strategies to face these tactics are pointed out:
+
+    -  Discuss them
+    -  Ignore them
+    -  Respond in kind
+    -  Co-opt the other party
+    
+## 
+
+```{dot}
+//| label: fig-hard-ball-tactics
+//| fig-cap: Typical hardball tactics [@lewicki_negociacion_2024, p 63]
+//| fig-width: 4.5
+//| fig-height: 2.5
+
+digraph boxes_and_circles {
+
+  graph [rankdir = TB]
+
+  node [shape = circle, color = "#2C3E50"]
+ 
+  "Hardball tactics";
+
+  node [shape = circle, color = "#E31A1C"]
+
+  "Good cop/bad cop";
+  "Lowball/highball";
+  "Bogey";
+  "Chicken";
+  "Intimidation";
+  "Aggressive\nbehavior";
+  "Snow job";
+  
+  "Hardball tactics" -> "Good cop/bad cop";
+  "Hardball tactics" -> "Lowball/highball";
+  "Hardball tactics" -> "Bogey";
+  "Hardball tactics" -> "Chicken";
+  "Hardball tactics" -> "Intimidation";
+  "Hardball tactics" -> "Aggressive\nbehavior";
+  "Hardball tactics" -> "Snow job";
+
+}
+```
 
 # Acknowledgments
 
-- To my family that supports me
+##
 
-- To the taxpayers of Colombia and the __[UMNG students](https://www.umng.edu.co/estudiante)__ who pay my salary
+-   To my family that supports me
 
-- To the __[Business Science](https://www.business-science.io/)__ and __[R4DS Online Learning](https://www.rfordatasci.com/)__ communities where I learn __[R](https://www.r-project.org/about.html)__ 
+-   To the taxpayers of Colombia and the [**UMNG students**](https://www.umng.edu.co/estudiante) who pay my salary
 
-- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__, __[Quarto](https://quarto.org/)__ and the authors and maintainers of the packages __[tidyverse](https://CRAN.R-project.org/package=tidyverse)__, __[tidyquant](https://CRAN.R-project.org/package=tidyquant)__, __[ggrepel](https://CRAN.R-project.org/package=ggrepel)__, __[DiagrammeR](https://CRAN.R-project.org/package=DiagrammeR)__ and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
+-   To the [**Business Science**](https://www.business-science.io/) and [**R4DS Online Learning**](https://www.rfordatasci.com/) communities where I learn [**R**](https://www.r-project.org/about.html) and [**$\pi$-thon**](https://www.python.org/about/)
 
-- To the __[Linux kernel community](https://www.kernel.org/category/about.html)__ for allowing me the possibility to use some __[Linux distributions](https://static.lwn.net/Distributions/)__ as my main __[OS](https://en.wikipedia.org/wiki/Operating_system)__ without paying for a license
+-   To the [**R Core Team**](https://www.r-project.org/contributors.html), the creators of [**RStudio IDE**](https://rstudio.com/products/rstudio/), [**Quarto**](https://quarto.org/) and the authors and maintainers of the packages [**tidyverse**](https://CRAN.R-project.org/package=tidyverse), [**tidyquant**](https://CRAN.R-project.org/package=tidyquant), [**ggrepel**](https://CRAN.R-project.org/package=ggrepel), [**DiagrammeR**](https://CRAN.R-project.org/package=DiagrammeR) and [**tinytex**](https://CRAN.R-project.org/package=tinytex) for allowing me to access these tools without paying for a license
 
-# References
+-   To the [**Linux kernel community**](https://www.kernel.org/category/about.html) for allowing me the possibility to use some [**Linux distributions**](https://static.lwn.net/Distributions/) as my main [**OS**](https://en.wikipedia.org/wiki/Operating_system) without paying for a license
+
+# References {.allowframebreaks}
