--- a/005_per_cog_emo.qmd
+++ b/005_per_cog_emo.qmd
@@ -1,356 +1,441 @@
 ---
-title: "Perception, Cognition, and Emotion"
-author: "Luis Francisco Gomez Lopez"
-date: 2024-01-27
-execute: 
-  echo: false
-  warning: false
-format:
+title: Perception, Cognition, and Emotion
+author: 
+  - Luis Francisco Gómez López
+institute: 
+  - FAEDIS
+date: last-modified
+format: 
   beamer:
     colortheme: dolphin
     fonttheme: structurebold
     theme: AnnArbor
     link-citations: true
-    linkcolor: blue
-    fig-align: center
+    colorlinks: true
+    toc: true
+    slide-level: 2
+    section-titles: false
+    keep-tex: true
     include-in-header:
-      - text: |
-          \usepackage{booktabs}
-          \usepackage{longtable}
-          \usepackage{array}
-          \usepackage{multirow}
-          \usepackage{wrapfig}
-          \usepackage{float}
-          \usepackage{colortbl}
-          \usepackage{pdflscape}
-          \usepackage{tabu}
-          \usepackage{threeparttable}
-          \usepackage{threeparttablex}
-          \usepackage[normalem]{ulem}
-          \usepackage{makecell}
-          \usepackage{xcolor}
-          \usepackage{fontawesome5}
+      file: 000_tex_files/preamble.tex
+fig-cap-location: bottom
+tbl-cap-location: top
+knitr: 
+  opts_chunk: 
+    echo: false
+    warning: false
+    fig-align: center
+    out-width: 85%
+lang: en
 bibliography: conflict_neg.bib
 ---
 
-```{r libraries}
+```{r}
+#| label: libraries
+
 library(knitr)
-library(DiagrammeR)
 ```
-
-# Contents
-
-- Please Read Me
-- Purpose
-- Perception
-- Framing
-- Cognitive Biases in Negotiation
-- An alternative approach: Mood and Emotion
-- Acknowledgments
-- References
 
 # Please Read Me
 
-- Check the message __Welcome greeting__ published in the News Bulletin Board.
+##
 
-- Dear student please edit your profile uploading a photo where your face is clearly visible.
+-   Check the message **Welcome greeting** published in the News Bulletin Board.
 
-- The purpose of the virtual meetings is to answer questions and not to make a summary of the study material.
+-   Dear student please edit your profile uploading a photo where your face is clearly visible.
 
-- This presentation is based on [@lewicki_essentials_2016, Chapter 6]
+-   The purpose of the virtual meetings is to answer questions and not to make a summary of the study material.
+
+-   This presentation is based on [@lewicki_negociacion_2024, Chapter 6]
 
 # Purpose
 
+##
+
 Understand how perceptions, knowledge and emotions affect a negotiation process.
 
-# Perception
+##
 
-- __Perception__ is defined as the process by which individuals acquire information from their environment through the senses. 
+-   **Perception** is defined as the process by which individuals acquire information from their environment through the senses.
 
-    + This information generates that the individual builds impressions and in that way can act.
+    -   Individuals actively construct impressions based on this information, guiding their subsequent behavior
 
-- The distortions of the perception may occur when the impressions that are generated don’t reflect the real aspects of a situation.
+-   The distortions of the perception may occur when the impressions that are generated don't reflect the real aspects of a situation.
 
-    + This type of distortions are known as __cognitive biases__
-    
-# Perception
+    -   This type of distortions are known as **cognitive biases**
 
-- Example of a distortion in perception
+##
+
+-   Example of a distortion in perception
 
 ![Checker Shadow illusion [@adelson_checkershadow_1995]](005_checkershadow_double_full.jpg){#fig-checker-shadow-illusion fig-alt="Checker Shadow illusion" width="400px" height="400px"}
 
-# Perception
+##
 
-- Example of a distortion in perception
+-   Example of a distortion in perception
 
 ![Sander's parallelogram [@luckiesh_visual_2017]](005_sander_Illusion.png){#fig-sanders-parallelogram fig-alt="Sander's parallelogram" width="400px" height="400px"}
 
-# Perception
+##
 
-- Example of a distortion in perception
+-   Example of a distortion in perception
 
 ![Müller-Lyer Illusion [@zeman_muller-lyer_2013]](005_muller_lLyer_circle.png){#fig-muller-lyer-illusion fig-alt="Müller-Lyer Illusion" width="300px" height="300px"}
 
 # Framing
 
-- __Framing__ is a concept initially coined by [@bateson_steps_2000] and developed by [@goffman_frame_1986]. 
+##
 
-    + It is defined as the interpretation schemes that individuals use to understand reality and act based on the interpretation they perform.
+-   **Framing** is a concept initially coined by [@bateson_steps_2000] and developed by [@goffman_frame_1986].
 
-- In general terms, this means that individuals have built mental filters throughout their lives that allow them to understand the world. In turn, these mental filters influence the decisions they make.
+    -   It is defined as the interpretation schemes that individuals use to understand reality and act based on the interpretation they perform.
 
-# Framing
+-   In general terms, this means that individuals have built mental filters throughout their lives that allow them to understand the world. In turn, these mental filters influence the decisions they make.
 
-- Example of how __framing__ can change decisions depending on how information is presented [@tversky_framing_1981, p 453]:
+##
 
-    + __Problem 1__ [N = 152][^1]: Imagine that the U.S. is preparing for the outbreak of an unusual Asian disease, which is expected to kill 600 people. Two alternative programs to combat the disease have been proposed. Assume that the exact scientific estimate of the consequences of the programs are as follows:
+-   Example of how **framing** can change decisions depending on how information is presented [@tversky_framing_1981, p 453]:
 
-        + If Program A is adopted, 200 people will be saved. __[72 percent]__[^2]
-        + If Program B is adopted, there is 1/3 probability that 600 people will be saved, and 2/3 probability that no people will be saved. __[28 percent]__[^3]
-    
-    - Which of the two programs would you favor?
-    
+    -   **Problem 1** \[N = 152\][^1]: Imagine that the U.S. is preparing for the outbreak of an unusual Asian disease, which is expected to kill 600 people. Two alternative programs to combat the disease have been proposed. Assume that the exact scientific estimate of the consequences of the programs are as follows:
+
+        -   If Program A is adopted, 200 people will be saved. **\[72 percent\]**[^2]
+        -   If Program B is adopted, there is 1/3 probability that 600 people will be saved, and 2/3 probability that no people will be saved. **\[28 percent\]**[^3]
+
+    -   Which of the two programs would you favor?
+
 [^1]: Number of people that participate in the experiment
+
 [^2]: Percentage of people that choose Program A
+
 [^3]: Percentage of people that choose Program B
 
+##
 
-# Framing
+-   Example of how **framing** can change decisions depending on how information is presented [@tversky_framing_1981, p 453]:
 
-- Example of how __framing__ can change decisions depending on how information is presented [@tversky_framing_1981, p 453]:
+    -   **Problem 2** \[N = 155\][^4]: The same statement as **Problem 1**
 
-    + __Problem 2__ [N = 155][^4]: The same statement as __Problem 1__
-    
-        + If Program C is adopted, 400 people will die. __[22 percent]__[^5]
-        + If Program D is adopted there is 1/3 probability that nobody will die, and 2/3 probability that 600 people will die. __[78 percent]__[^6]
-        
-    + Which of the two programs would you favor?
+        -   If Program C is adopted, 400 people will die. **\[22 percent\]**[^5]
+        -   If Program D is adopted there is 1/3 probability that nobody will die, and 2/3 probability that 600 people will die. **\[78 percent\]**[^6]
 
-- __Problem 1__ and __Problem 2__ are equivalent but they are frame in a different way. This is why the majority choice in __Problem 1__ is Program A and for the __Problem 2__ is Program D.
-    
+    -   Which of the two programs would you favor?
+
+-   **Problem 1** and **Problem 2** are equivalent but they are frame in a different way. This is why the majority choice in **Problem 1** is Program A and for the **Problem 2** is Program D.
+
 [^4]: Number of people that participate in the experiment
+
 [^5]: Percentage of people that choose Program C
+
 [^6]: Percentage of people that choose Program D
 
-# Framing
+##
 
-- In the field of negotiation you can also influence the perception of the counterpart through framing. An introduction to this topic can be found in [@shonk_framing_2020]:
+-   In the field of negotiation you can also influence the perception of the counterpart through framing. An introduction to this topic can be found in [@shonk_framing_2020]:
 
-    + Offer Manageable Choices [@iyengar_when_2000]
-    + Make Several Offers [@leonardelli_multiple_2019]
-    + Be Willing to Be Rejected [@simonson_choice_1992]
-    
+    -   Offer Manageable Choices [@iyengar_when_2000]
+    -   Make Several Offers [@leonardelli_multiple_2019]
+    -   Be Willing to Be Rejected [@simonson_choice_1992]
+
 # Cognitive Biases in Negotiation
 
-- A __cognitive bias__ is defined as a systematic error that affects the decisions and judgments. In [@lewicki_essentials_2016, p 150-156] 12 __cognitive bias__ that may occur in the context of a negotiation are described[^7]:
+##
 
-```{r }
-#| out-width: 70%
-#| fig-align: center
+-   A **cognitive bias** is defined as a systematic error that affects the decisions and judgments.
 
-grViz("
+```{dot}
+//| label: fig-cognitive-biases-in-negotiation-1
+//| fig-cap: Cognitive biases in the context of a negotiation[^7]
+//| fig-width: 4.5
+//| fig-height: 2.5
+
 digraph boxes_and_circles {
 
   graph [rankdir = LR]
 
-  node [shape = circle, color = '#2C3E50']
+  node [shape = circle, color = "#2C3E50"]
  
-  'Cognitive biases\nin negotiation';
+  "Cognitive biases\nin negotiation";
 
-  node [shape = oval, color = '#E31A1C']
+  node [shape = oval, color = "#E31A1C"]
 
-  'Irrational Escalation\nof Commitment';
-  'Mythical fixed-pie beliefs';
-  'Anchoring and Adjustment';
-  'Issue Framing and Risk';
-  'Availability of Information';
-  'The Winner’s Curse';
+  "Irrational Escalation\nof Commitment";
+  "Mythical fixed-pie beliefs";
+  "Anchoring and Adjustment";
+  "Issue Framing and Risk";
+  "Availability of Information";
+  "The Winner’s Curse";
  
-  node [shape = oval, color = '#18BC9C']
+  node [shape = oval, color = "#18BC9C"]
   
-  'Persist in pursuing a\nfailing course of action';
-  'Tendency to see negotiation\nas a zero-sum situation';
-  'Be influenced by a reference point\nand failing to make adjustements';
-  'Be influenced by a frame\nin a risk situation';
-  'Tendency to overweight information\nthat is easily recalled';
-  'Feel discomfort about\na negotiation win';
+  "Persist in pursuing a\nfailing course of action";
+  "Tendency to see negotiation\nas a zero-sum situation";
+  "Be influenced by a reference point\nand failing to make adjustements";
+  "Be influenced by a frame\nin a risk situation";
+  "Tendency to overweight information\nthat is easily recalled";
+  "Feel discomfort about\na negotiation win";
   
-  'Cognitive biases\nin negotiation' -> 'Irrational Escalation\nof Commitment';
-  'Cognitive biases\nin negotiation' -> 'Mythical fixed-pie beliefs';
-  'Cognitive biases\nin negotiation' -> 'Anchoring and Adjustment';
-  'Cognitive biases\nin negotiation' -> 'Issue Framing and Risk';
-  'Cognitive biases\nin negotiation' -> 'Availability of Information';
-  'Cognitive biases\nin negotiation' -> 'The Winner’s Curse';
+  "Cognitive biases\nin negotiation" -> "Irrational Escalation\nof Commitment";
+  "Cognitive biases\nin negotiation" -> "Mythical fixed-pie beliefs";
+  "Cognitive biases\nin negotiation" -> "Anchoring and Adjustment";
+  "Cognitive biases\nin negotiation" -> "Issue Framing and Risk";
+  "Cognitive biases\nin negotiation" -> "Availability of Information";
+  "Cognitive biases\nin negotiation" -> "The Winner’s Curse";
   
-  'Irrational Escalation\nof Commitment' -> 'Persist in pursuing a\nfailing course of action';
-  'Mythical fixed-pie beliefs'           -> 'Tendency to see negotiation\nas a zero-sum situation';
-  'Anchoring and Adjustment'             -> 'Be influenced by a reference point\nand failing to make adjustements';
-  'Issue Framing and Risk'               -> 'Be influenced by a frame\nin a risk situation';
-  'Availability of Information'          -> 'Tendency to overweight information\nthat is easily recalled';
-  'The Winner’s Curse'                   -> 'Feel discomfort about\na negotiation win';
+  "Irrational Escalation\nof Commitment" -> "Persist in pursuing a\nfailing course of action";
+  "Mythical fixed-pie beliefs"           -> "Tendency to see negotiation\nas a zero-sum situation";
+  "Anchoring and Adjustment"             -> "Be influenced by a reference point\nand failing to make adjustements";
+  "Issue Framing and Risk"               -> "Be influenced by a frame\nin a risk situation";
+  "Availability of Information"          -> "Tendency to overweight information\nthat is easily recalled";
+  "The Winner’s Curse"                   -> "Feel discomfort about\na negotiation win";
 }
-")
 ```
 
-[^7]: For a general __cognitive bias__ taxonomy check out [@dimara_task-based_2020]
+[^7]: For a general **cognitive bias** taxonomy check out [@dimara_task-based_2020]
 
-# Cognitive Biases in Negotiation
+##
 
-- A __cognitive bias__ is defined as a systematic error that affects the decisions and judgments. In [@lewicki_essentials_2016, p 150-156] 12 __cognitive bias__ that may occur in the context of a negotiation are described[^8]:
+-   A **cognitive bias** is defined as a systematic error that affects the decisions and judgments.
 
-```{r }
-#| out-width: 70%
-#| fig-align: center
+```{dot}
+//| label: fig-cognitive-biases-in-negotiation-2
+//| fig-cap: Cognitive biases in the context of a negotiation[^8]
+//| fig-width: 4.5
+//| fig-height: 2.5
 
-grViz("
 digraph boxes_and_circles {
 
   graph [rankdir = LR]
 
-  node [shape = circle, color = '#2C3E50']
+  node [shape = circle, color = "#2C3E50"]
  
-  'Cognitive biases\nin negotiation';
+  "Cognitive biases\nin negotiation";
 
-  node [shape = oval, color = '#E31A1C']
+  node [shape = oval, color = "#E31A1C"]
 
-  'Overconfidence';
-  'The Law of Small Numbers';
-  'Self-Serving Biases';
-  'Endowment Effect';
-  'Ignoring others’ cognitions';
-  'Reactive devaluation';
+  "Overconfidence";
+  "The Law of Small Numbers";
+  "Self-Serving Biases";
+  "Endowment Effect";
+  "Ignoring others’ cognitions";
+  "Reactive devaluation";
  
-  node [shape = oval, color = '#18BC9C']
+  node [shape = oval, color = "#18BC9C"]
   
-  'Tendency to believe that one’s ability\nto be accurate is greater than it is';
-  'Draw conclusions based\non small data samples';
-  'Overestimate the internal factors\nand underestimate the external factors';
-  'Tendency to inflate the\nvalue of something you own';
-  'Failure to consider the other party’s';
-  'Placing less value on concessions\nbecause the other party offered them';
+  "Tendency to believe that one’s ability\nto be accurate is greater than it is";
+  "Draw conclusions based\non small data samples";
+  "Overestimate the internal factors\nand underestimate the external factors";
+  "Tendency to inflate the\nvalue of something you own";
+  "Failure to consider the other party’s";
+  "Placing less value on concessions\nbecause the other party offered them";
   
-  'Cognitive biases\nin negotiation' -> 'Overconfidence';
-  'Cognitive biases\nin negotiation' -> 'The Law of Small Numbers';
-  'Cognitive biases\nin negotiation' -> 'Self-Serving Biases';
-  'Cognitive biases\nin negotiation' -> 'Endowment Effect';
-  'Cognitive biases\nin negotiation' -> 'Ignoring others’ cognitions';
-  'Cognitive biases\nin negotiation' -> 'Reactive devaluation';
+  "Cognitive biases\nin negotiation" -> "Overconfidence";
+  "Cognitive biases\nin negotiation" -> "The Law of Small Numbers";
+  "Cognitive biases\nin negotiation" -> "Self-Serving Biases";
+  "Cognitive biases\nin negotiation" -> "Endowment Effect";
+  "Cognitive biases\nin negotiation" -> "Ignoring others’ cognitions";
+  "Cognitive biases\nin negotiation" -> "Reactive devaluation";
   
-  'Overconfidence'              -> 'Tendency to believe that one’s ability\nto be accurate is greater than it is';
-  'The Law of Small Numbers'    -> 'Draw conclusions based\non small data samples';
-  'Self-Serving Biases'         -> 'Overestimate the internal factors\nand underestimate the external factors';
-  'Endowment Effect'            -> 'Tendency to inflate the\nvalue of something you own';
-  'Ignoring others’ cognitions' -> 'Failure to consider the other party’s';
-  'Reactive devaluation'        -> 'Placing less value on concessions\nbecause the other party offered them';
+  "Overconfidence"              -> "Tendency to believe that one’s ability\nto be accurate is greater than it is";
+  "The Law of Small Numbers"    -> "Draw conclusions based\non small data samples";
+  "Self-Serving Biases"         -> "Overestimate the internal factors\nand underestimate the external factors";
+  "Endowment Effect"            -> "Tendency to inflate the\nvalue of something you own";
+  "Ignoring others’ cognitions" -> "Failure to consider the other party’s";
+  "Reactive devaluation"        -> "Placing less value on concessions\nbecause the other party offered them";
 }
-")
 ```
 
-[^8]: For a general __cognitive bias__ taxonomy check out [@dimara_task-based_2020]
+[^8]: For a general **cognitive bias** taxonomy check out [@dimara_task-based_2020]
 
 # An alternative approach: Mood and Emotion
 
-- The study of __cognitive biases__ in negotiation is focused on how negotiators make judgment errors or how can negotiators can mitigate or eliminate this errors to improve the decision making process.
+##
 
-- Another approach is to use emotions as a strategic tool in negotiations[^9] by adjusting the negotiation stance based on the other party’s emotional state.
+-   The study of **cognitive biases** in negotiation is focused on how negotiators make judgment errors or how can negotiators can mitigate or eliminate this errors to improve the decision making process.
+
+-   Another approach is to use emotions as a strategic tool in negotiations[^9] by adjusting the negotiation stance based on the other party’s emotional state.
 
 [^9]: As a conflict negotiation professor I am quite bad at using this tool
 
-# An alternative approach: Mood and Emotion
+##
 
-```{r }
-#| out-width: 90%
-#| fig-cap: Positive emotions and positive consequences for negotiations [@lewicki_essentials_2016, p 157-158]
-#| fig-align: center
+```{dot}
+//| label: fig-positive-emotions-consequences
+//| fig-cap: Positive emotions and consequences for negotiations [@lewicki_negociacion_2024, p 202]
+//| fig-width: 4.5
+//| fig-height: 2.5
 
-grViz("
 digraph boxes_and_circles {
 
   graph [rankdir = LR]
 
-  node [shape = circle, color = '#2C3E50']
+  node [shape = circle, color = "#2C3E50"]
  
-  'Why?';
+  "Why?";
 
-  node [shape = oval, color = '#E31A1C']
+  node [shape = oval, color = "#E31A1C"]
 
-  'Positive\nemotions';
+  "Positive\nemotions";
  
-  node [shape = oval, color = '#18BC9C']
+  node [shape = oval, color = "#18BC9C"]
   
-  'Generate positive\nconsequences for\nnegotiations';
+  "Generate positive\nconsequences for\nnegotiations";
   
-  node [shape = oval, color = '#CCBE93']
+  node [shape = oval, color = "#CCBE93"]
   
-  'Lead the parties\ntoward more\nintegrative processes';
-  'Create a positive\nattitude toward\nthe other side';
-  'Promote persistence';
-  'Set the stage\nfor successful\nsubsequent negotiations';
+  "Lead the parties\ntoward more\nintegrative processes";
+  "Create a positive\nattitude toward\nthe other side";
+  "Promote persistence";
+  "Set the stage\nfor successful\nsubsequent negotiations";
   
-  'Why?' -> 'Positive\nemotions';
+  "Why?" -> "Positive\nemotions";
   
-  'Positive\nemotions' -> 'Generate positive\nconsequences for\nnegotiations';
+  "Positive\nemotions" -> "Generate positive\nconsequences for\nnegotiations";
   
-  'Generate positive\nconsequences for\nnegotiations' -> 'Lead the parties\ntoward more\nintegrative processes';
-  'Generate positive\nconsequences for\nnegotiations' -> 'Create a positive\nattitude toward\nthe other side';
-  'Generate positive\nconsequences for\nnegotiations' -> 'Promote persistence';
-  'Generate positive\nconsequences for\nnegotiations' -> 'Set the stage\nfor successful\nsubsequent negotiations';
-  
+  "Generate positive\nconsequences for\nnegotiations" -> "Lead the parties\ntoward more\nintegrative processes";
+  "Generate positive\nconsequences for\nnegotiations" -> "Create a positive\nattitude toward\nthe other side";
+  "Generate positive\nconsequences for\nnegotiations" -> "Promote persistence";
+  "Generate positive\nconsequences for\nnegotiations" -> "Set the stage\nfor successful\nsubsequent negotiations";
 }
-")
 ```
 
-# An alternative approach: Mood and Emotion
+##
 
-```{r}
-#| out-width: 90%
-#| fig-cap: Aspects of the negotiation process and positive emotions [@lewicki_essentials_2016, p 159]
-#| fig-align: center
+```{dot}
+//| label: fig-aspects-negotiation-process-positive-emotions
+//| fig-cap: Aspects of the negotiation process and positive emotions [@lewicki_negociacion_2024, p 203]
+//| fig-width: 4.5
+//| fig-height: 2.5
 
-grViz("
 digraph boxes_and_circles {
 
   graph [rankdir = LR]
 
-  node [shape = circle, color = '#2C3E50']
+  node [shape = circle, color = "#2C3E50"]
  
-  'Why?';
+  "Why?";
 
-  node [shape = oval, color = '#E31A1C']
+  node [shape = oval, color = "#E31A1C"]
 
-  'Aspects of the\nNegotiation Process';
+  "Aspects of the\nNegotiation Process";
  
-  node [shape = oval, color = '#18BC9C']
+  node [shape = oval, color = "#18BC9C"]
   
-  'Fair procedures\nduring negotiation';
-  'Favorable social comparisons\n(Comparing\nyour outcome\nto others outside\nthe negotiation)';
+  "Fair procedures\nduring negotiation";
+  "Favorable social comparisons\n(Comparing\nyour outcome\nto others outside\nthe negotiation)";
   
-  node [shape = oval, color = '#CCBE93']
+  node [shape = oval, color = "#CCBE93"]
   
-  'Positive\nemotions'
+  "Positive\nemotions"
   
-  'Why?' -> 'Aspects of the\nNegotiation Process';
+  "Why?" -> "Aspects of the\nNegotiation Process";
   
-  'Aspects of the\nNegotiation Process' -> 'Fair procedures\nduring negotiation';
-  'Aspects of the\nNegotiation Process' -> 'Favorable social comparisons\n(Comparing\nyour outcome\nto others outside\nthe negotiation)';
+  "Aspects of the\nNegotiation Process" -> "Fair procedures\nduring negotiation";
+  "Aspects of the\nNegotiation Process" -> "Favorable social comparisons\n(Comparing\nyour outcome\nto others outside\nthe negotiation)";
   
-  'Fair procedures\nduring negotiation'                                                         -> 'Positive\nemotions';
-  'Favorable social comparisons\n(Comparing\nyour outcome\nto others outside\nthe negotiation)' -> 'Positive\nemotions';
-  
+  "Fair procedures\nduring negotiation"                                                         -> "Positive\nemotions";
+  "Favorable social comparisons\n(Comparing\nyour outcome\nto others outside\nthe negotiation)" -> "Positive\nemotions";
 }
-")
+```
+
+##
+
+```{dot}
+//| label: fig-negative-emotions-consequences
+//| fig-cap: Negative emotions and consequences for negotiations [@lewicki_negociacion_2024, p 203-204]
+//| fig-width: 4.5
+//| fig-height: 2.5
+
+digraph boxes_and_circles {
+
+  graph [rankdir = LR]
+
+  node [shape = circle, color = "#2C3E50"]
+ 
+  "Why?";
+
+  node [shape = oval, color = "#E31A1C"]
+
+  "Negative\nemotions";
+ 
+  node [shape = oval, color = "#18BC9C"]
+  
+  "Generate negative\nconsequences for\nnegotiations";
+  
+  node [shape = oval, color = "#CCBE93"]
+  
+  "Lead the parties\nto define the situation\nas distributive";
+  "Undermine a negotiator’s\nability to analyze\nthe situation accurately\naffecting individual outcome";
+  "Lead the parties\nto escalate the\nconflict";
+  "Lead the parties\nto retaliate\nand prevent\nintegrative outcomes";
+  
+  "Why?" -> "Negative\nemotions";
+  
+  "Negative\nemotions" -> "Generate negative\nconsequences for\nnegotiations";
+  
+  "Generate negative\nconsequences for\nnegotiations" -> "Lead the parties\nto define the situation\nas distributive";
+    "Generate negative\nconsequences for\nnegotiations" -> "Undermine a negotiator’s\nability to analyze\nthe situation accurately\naffecting individual outcome";
+  "Generate negative\nconsequences for\nnegotiations" -> "Lead the parties\nto escalate the\nconflict";
+  "Generate negative\nconsequences for\nnegotiations" -> "Lead the parties\nto retaliate\nand prevent\nintegrative outcomes";
+}
+```
+
+##
+
+```{dot}
+//| label: fig-aspects-negotiation-process-negative-emotions
+//| fig-cap: Aspects of the negotiation process and negative emotions [@lewicki_negociacion_2024, p 205]
+//| fig-width: 4.5
+//| fig-height: 2.5
+
+digraph boxes_and_circles {
+
+  graph [rankdir = LR]
+
+  node [shape = circle, color = "#2C3E50"]
+ 
+  "Why?";
+
+  node [shape = oval, color = "#E31A1C"]
+
+  "Aspects of the\nNegotiation Process";
+ 
+  node [shape = oval, color = "#18BC9C"]
+  
+  "Competitive mindset";
+  "Negotiation ending\nin an impasse";
+  "Negative anxiety\nfrom the prospect of\nbeginning a negotiation";
+  "Negative experiences\ncarry over from\npast negotiations";
+  
+  node [shape = oval, color = "#CCBE93"]
+  
+  "Negative\nemotions"
+  
+  "Why?" -> "Aspects of the\nNegotiation Process";
+  
+  "Aspects of the\nNegotiation Process" -> "Competitive mindset";
+  "Aspects of the\nNegotiation Process" -> "Negotiation ending\nin an impasse";
+  "Aspects of the\nNegotiation Process" -> "Negative anxiety\nfrom the prospect of\nbeginning a negotiation";
+  "Aspects of the\nNegotiation Process" -> "Negative experiences\ncarry over from\npast negotiations";
+  
+  "Competitive mindset" -> "Negative\nemotions";
+  "Negotiation ending\nin an impasse" -> "Negative\nemotions";
+  "Negative anxiety\nfrom the prospect of\nbeginning a negotiation" -> "Negative\nemotions";
+  "Negative experiences\ncarry over from\npast negotiations" -> "Negative\nemotions";
+}
 ```
 
 # Acknowledgments
 
-- To my family that supports me
+##
 
-- To the taxpayers of Colombia and the __[UMNG students](https://www.umng.edu.co/estudiante)__ who pay my salary
+-   To my family that supports me
 
-- To the __[Business Science](https://www.business-science.io/)__ and __[R4DS Online Learning](https://www.rfordatasci.com/)__ communities where I learn __[R](https://www.r-project.org/about.html)__ 
+-   To the taxpayers of Colombia and the [**UMNG students**](https://www.umng.edu.co/estudiante) who pay my salary
 
-- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__, __[Quarto](https://quarto.org/)__ and the authors and maintainers of the packages __[DiagrammeR](https://CRAN.R-project.org/package=DiagrammeR)__, __[knitr](https://CRAN.R-project.org/package=knitr)__, and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
+-   To the [**Business Science**](https://www.business-science.io/) and [**R4DS Online Learning**](https://www.rfordatasci.com/) communities where I learn [**R**](https://www.r-project.org/about.html) and [**$\pi$-thon**](https://www.python.org/about/)
 
-- To the __[Linux kernel community](https://www.kernel.org/category/about.html)__ for allowing me the possibility to use some __[Linux distributions](https://static.lwn.net/Distributions/)__ as my main __[OS](https://en.wikipedia.org/wiki/Operating_system)__ without paying for a license
+-   To the [**R Core Team**](https://www.r-project.org/contributors.html), the creators of [**RStudio IDE**](https://rstudio.com/products/rstudio/), [**Quarto**](https://quarto.org/) and the authors and maintainers of the packages [**knitr**](https://CRAN.R-project.org/package=knitr), and [**tinytex**](https://CRAN.R-project.org/package=tinytex) for allowing me to access these tools without paying for a license
+
+-   To the [**Linux kernel community**](https://www.kernel.org/category/about.html) for allowing me the possibility to use some [**Linux distributions**](https://static.lwn.net/Distributions/) as my main [**OS**](https://en.wikipedia.org/wiki/Operating_system) without paying for a license
 
 # References {.allowframebreaks}
