--- a/006_commu.qmd
+++ b/006_commu.qmd
@@ -1,191 +1,188 @@
 ---
-title: "Communication and Three-Party Coalition Exercise Round 2"
-author: "Luis Francisco Gomez Lopez"
-date: 2024-01-27
-execute: 
-  echo: false
-  warning: false
-format:
+title: Communication and Three-Party Coalition Exercise Round 2
+author: 
+  - Luis Francisco Gómez López
+institute: 
+  - FAEDIS
+date: last-modified
+format: 
   beamer:
     colortheme: dolphin
     fonttheme: structurebold
     theme: AnnArbor
     link-citations: true
-    linkcolor: blue
-    fig-align: center
+    colorlinks: true
+    toc: true
+    slide-level: 2
+    section-titles: false
+    keep-tex: true
     include-in-header:
-      - text: |
-          \usepackage{booktabs}
-          \usepackage{longtable}
-          \usepackage{array}
-          \usepackage{multirow}
-          \usepackage{wrapfig}
-          \usepackage{float}
-          \usepackage{colortbl}
-          \usepackage{pdflscape}
-          \usepackage{tabu}
-          \usepackage{threeparttable}
-          \usepackage{threeparttablex}
-          \usepackage[normalem]{ulem}
-          \usepackage{makecell}
-          \usepackage{xcolor}
-          \usepackage{fontawesome5}
+      file: 000_tex_files/preamble.tex
+header-includes: 
+-   \titlegraphic{\includegraphics[width=3cm]{000_logos/logo-blue-vertical}}
+fig-cap-location: bottom
+tbl-cap-location: top
+knitr: 
+  opts_chunk: 
+    echo: false
+    warning: false
+    fig-align: center
+    out-width: 85%
+lang: en
 bibliography: conflict_neg.bib
 ---
 
-```{r libraries}
+```{r}
+#| label: libraries
 
 library(tidyverse)
 library(knitr)
 library(kableExtra)
-library(DiagrammeR)
 ```
-
-# Contents
-
-- Please Read Me
-- Purpose
-- Three Party Coalition Exercise Round 2
-- What Is Communicated during Negotiation?
-- How People Communicate in Negotiation
-- How to Improve Communication in Negotiation
-- Acknowledgments
-- References
 
 # Please Read Me
 
-- Check the message __Welcome greeting__ published in the News Bulletin Board.
+## 
 
-- Dear student please edit your profile uploading a photo where your face is clearly visible.
+-   Check the message **Welcome greeting** published in the News Bulletin Board.
 
-- The purpose of the virtual meetings is to answer questions and not to make a summary of the study material.
+-   Dear student please edit your profile uploading a photo where your face is clearly visible.
 
-- This presentation is based on [@lewicki_essentials_2016, Chapter 7]
+-   The purpose of the virtual meetings is to answer questions and not to make a summary of the study material.
+
+-   This presentation is based on [@lewicki_negociacion_2024, Chapter 7]
 
 # Purpose
+
+##
 
 Explore the tools and practices to improve communication processes in a negotiation.
 
 # Three Party Coalition Exercise Round 2
 
-- Why the Midterm Exams are simulations and in group?
+##
 
-    + The negotiation of conflicts is generated between individuals or groups and one way of learning is precisely by negotiating with other people. 
-    
-    + It is not effective to learn individually and only theoretically. 
-    
-    + It is as if a person learned theoretically to play football and without ever playing in a team. Most likely, that person will not perform well in a real match.
-    
-- Before taking part, students should review the instructions of the Midterm Exam that can be checked at:
+-   Why the Midterm Exams are simulations and in group?
 
-    + Segundo corte 30% > Learning Activities > Midterm Exam Three Party Coalition Exercise Round 2
-    
-# Three Party Coalition Exercise Round 1
-    
-- Also check out in the __Links of interest__ the videos[^1]
-    
-    + _Three-Party Coalition Exercise_ [@program_on_negotiation_negotiation_2014] and [@program_on_negotiation_negotiation_2014-1]
-    
+    -   The negotiation of conflicts is generated between individuals or groups and one way of learning is precisely by negotiating with other people.
+
+    -   It is not effective to learn individually and only theoretically.
+
+    -   It is as if a person learned theoretically to play football and without ever playing in a team. Most likely, that person will not perform well in a real match.
+
+-   Before taking part, students should review the instructions of the Midterm Exam that can be checked at:
+
+    -   Segundo corte 30% \> Learning Activities \> Midterm Exam Three Party Coalition Exercise Round 2
+
+##
+
+-   Also check out in the **Links of interest** the videos[^1]
+
+    -   *Three-Party Coalition Exercise* [@program_on_negotiation_negotiation_2014] and [@program_on_negotiation_negotiation_2014-1]
+
 [^1]: The videos are in english and are recordings of the Three-Party Coalition Exercise simulation
-    
-# Three Party Coalition Exercise Round 2
 
-- Before the Midterm Exam begins each student of the group, that has been formed, will be randomly assigned to one and only one role as a negotiator of an organization. If there is a group of 4 students, then a
-role will be played by 2 students. The respective roles are:
+##
 
-    + __Group A__
-    + __Group B__
-    + __Group C__
-    
-- The objective of the negotiation is to obtain the highest number of points and determine how they will be divided. This will be reflected in the grade obtained by each student.
+-   Before the Midterm Exam begins each student of the group, that has been formed, will be randomly assigned to one and only one role as a negotiator of an organization. If there is a group of 4 students, then a role will be played by 2 students. The respective roles are:
 
-# Three Party Coalition Exercise Round 2
+    -   **Group A**
+    -   **Group B**
+    -   **Group C**
 
-- If an agreement is not reached between the parties of the negotiation, each __Group__ obtains __0 points__ and the grade for each student will be __20__ out of 50:
+-   The objective of the negotiation is to obtain the highest number of points and determine how they will be divided. This will be reflected in the grade obtained by each student.
+
+##
+
+-   If an agreement is not reached between the parties of the negotiation, each **Group** obtains **0 points** and the grade for each student will be **20** out of 50:
 
 ```{r}
+#| label: tbl-no-agreement
+#| tbl-cap: Results in case of no agreement
 
 tibble(Group  = c("A", "B", "C"),
        Points = rep(x = 0, times = 3),
-       Grade  = rep(x = 20, times = 3)) %>% 
-  kable(format = "latex", booktabs = TRUE) %>% 
-  kable_styling(font_size = 9, latex_options = "striped") %>%
+       Grade  = rep(x = 20, times = 3)) |> 
+  kable(format = "latex", booktabs = TRUE) |> 
+  kable_styling(font_size = 9, latex_options = "striped") |>
   row_spec(row = 0, bold = TRUE)
 ```
 
-# Three Party Coalition Exercise Round 2
+##
 
-- If an agreement is reached, it can be obtained between 2 or 3 __Groups__:
+-   If an agreement is reached, it can be obtained between 2 or 3 **Groups**:
 
-    + Possible agreements:
+    -   Possible agreements:
 
-        + __Case 1__: __A__ and __B__ decide to reach an agreement to work together, they obtain __118 points__ and must decide how to distribute these points. However, __C__ will be excluded.
-        
-        + __Case 2__: __A__ and __C__ decide to reach an agreement to work together, they obtain __84 points__ and must decide how to distribute these points. However, __B__ will be excluded.
-        
-        + __Case 3__: __B__ and __C__ decide to reach an agreement to work together, they obtain __50 points__ and must decide how to distribute these points. However, __A__ will be excluded.
-        
-        + __Case 4__: __A__, __B__ and __C__ decide to reach an agreement to work together, they obtain __121 points__ and must decide how to distribute these points. Nobody is excluded.
-        
-# Three Party Coalition Exercise Round 2
+        -   **Case 1**: **A** and **B** decide to reach an agreement to work together, they obtain **118 points** and must decide how to distribute these points. However, **C** will be excluded.
 
-- Grades
+        -   **Case 2**: **A** and **C** decide to reach an agreement to work together, they obtain **84 points** and must decide how to distribute these points. However, **B** will be excluded.
 
-    + __Case 1__: __A__ and __B__ work together but __C__ is excluded.
-    
-        + __C__ obtains a grade of __35__ out of 50.
-        + The grade of __A__ and __B__ will depend on who gets the most of the __118 points__. The __Group__ that gets the most points will have a grade of __50__ out of __50__ and the other __Group__ gets a grade of __40__ out of __50__. If __A__ and __B__ divide the points equally, whoever gets the highest grade will be assigned randomly.
-        
-    + __Case 2__: __A__ and __C__ work together but __B__ is excluded.
-    
-        + __B__ obtains a grade of __35__ out of 50. 
-        + The grade of __A__ and __C__ will depend on who gets the most of the __84 points__. The __Group__ that gets the most points will have a grade of __50__ out of 50 and the other __Group__ gets a grade of __40__ out of 50. If __A__ and __C__ divide the points equally, whoever gets the highest grade will be assigned randomly.
-        
-# Three Party Coalition Exercise Round 2
+        -   **Case 3**: **B** and **C** decide to reach an agreement to work together, they obtain **50 points** and must decide how to distribute these points. However, **A** will be excluded.
 
-- Grades
+        -   **Case 4**: **A**, **B** and **C** decide to reach an agreement to work together, they obtain **121 points** and must decide how to distribute these points. Nobody is excluded.
 
-    + __Case 3__: __B__ and __C__ work together but __A__ is excluded.
-    
-        + __A__ obtains a grade of __35__ out of 50.
-        + The grade of __B__ and __C__ will depend on who gets the most of the __50 points__. The __Group__ that gets the most points will have a grade of __50__ out of 50 and the other __Group__ gets a grade of __40__ out of 50. If __B__ and __C__ divide the points equally, whoever gets the highest grade will be assigned randomly.
-        
-    + __Case 4__: __A__, __B__ and __C__ work together so nobody is excluded.
-    
-        + The __Group__ that obtains the highest amount of points will have a grade of __50__ out of 50, the __Group__ that obtains the second highest amount of points obtains a grade of __40__ out of 50 and the __Group__ that obtains the lowest amount of points obtains a grade of __35__ out of 50. In case of a tie between any of the __Groups__, the one who obtains the highest grade, the second highest grade or the lowest grade will be assigned randomly depending on whether there is a tie between 2 or 3 __Groups__.
-        
-# Three Party Coalition Exercise Round 2
+##
 
-- Before, during and after the Midterm Exam remember:
+-   Grades
 
-    + __Before__
+    -   **Case 1**: **A** and **B** work together but **C** is excluded.
 
-        + To form groups where this task is the responsibility of students and read the instructions.
-        
-    + __During__
-    
-        + You have to make 2 decisions: Who do you want to work with? How will the points be divided?
-        + Your grade depends on the amount of points you obtain and no extra points will be assigned for helping or harming the parties involved in the negotiation.
-        + If an agreement is reached and the same amount of points is obtained as another __Group__ then the highest grade will be assigned randomly within the __Groups__ that obtained the same amount of points.
-        + It is okay to discuss but you must respect the parameters indicated in the last paragraph of the specific instructions.
-        
-# Three Party Coalition Exercise Round 2
+        -   **C** obtains a grade of **35** out of 50.
+        -   The grade of **A** and **B** will depend on who gets the most of the **118 points**. The **Group** that gets the most points will have a grade of **50** out of **50** and the other **Group** gets a grade of **40** out of **50**. If **A** and **B** divide the points equally, whoever gets the highest grade will be assigned randomly.
 
-- Before, during and after the Midterm Exam remember:
+    -   **Case 2**: **A** and **C** work together but **B** is excluded.
 
-    + __After__
-    
-        + Once the negotiation is over, which should last a maximum of 20 minutes, inform the professor of the final result: Was an agreement reached? What was the agreement?
-        
+        -   **B** obtains a grade of **35** out of 50.
+        -   The grade of **A** and **C** will depend on who gets the most of the **84 points**. The **Group** that gets the most points will have a grade of **50** out of 50 and the other **Group** gets a grade of **40** out of 50. If **A** and **C** divide the points equally, whoever gets the highest grade will be assigned randomly.
+
+##
+
+-   Grades
+
+    -   **Case 3**: **B** and **C** work together but **A** is excluded.
+
+        -   **A** obtains a grade of **35** out of 50.
+        -   The grade of **B** and **C** will depend on who gets the most of the **50 points**. The **Group** that gets the most points will have a grade of **50** out of 50 and the other **Group** gets a grade of **40** out of 50. If **B** and **C** divide the points equally, whoever gets the highest grade will be assigned randomly.
+
+    -   **Case 4**: **A**, **B** and **C** work together so nobody is excluded.
+
+        -   The **Group** that obtains the highest amount of points will have a grade of **50** out of 50, the **Group** that obtains the second highest amount of points obtains a grade of **40** out of 50 and the **Group** that obtains the lowest amount of points obtains a grade of **35** out of 50. In case of a tie between any of the **Groups**, the one who obtains the highest grade, the second highest grade or the lowest grade will be assigned randomly depending on whether there is a tie between 2 or 3 **Groups**.
+
+##
+
+-   Before, during and after the Midterm Exam remember:
+
+    -   **Before**
+
+        -   To form groups where this task is the responsibility of students and read the instructions.
+
+    -   **During**
+
+        -   You have to make 2 decisions: Who do you want to work with? How will the points be divided?
+        -   Your grade depends on the amount of points you obtain and no extra points will be assigned for helping or harming the parties involved in the negotiation.
+        -   If an agreement is reached and the same amount of points is obtained as another **Group** then the highest grade will be assigned randomly within the **Groups** that obtained the same amount of points.
+        -   It is okay to discuss but you must respect the parameters indicated in the last paragraph of the specific instructions.
+
+##
+
+-   Before, during and after the Midterm Exam remember:
+
+    -   **After**
+
+        -   Once the negotiation is over, which should last a maximum of 20 minutes, inform the professor of the final result: Was an agreement reached? What was the agreement?
+
 # What Is Communicated during Negotiation?
 
-```{r }
-#| out-width: 60%
-#| fig-align: center
+##
 
-grViz(diagram = '
-      
-      digraph boxes_and_circles {
+```{dot}
+//| label: fig-elements-communicated-in-a-negotiation
+//| fig-cap: Elements communicated during a negotiation [@lewicki_negociacion_2024, p 216]
+//| fig-width: 4.5
+//| fig-height: 2.5
+
+digraph boxes_and_circles {
       
       graph [rankdir = LR]
       
@@ -224,37 +221,36 @@ grViz(diagram = '
       "Social\nAccounts" -> "Exonerating\ncircumstances";
       "Social\nAccounts" -> "Reframing";
       "Communication\nabout Process" -> "Trivial “small talk”\nthat breaks\nthe ice";
-
-      }
-      
-      ')
+}
 ```
 
-# What Is Communicated during Negotiation?
+##
 
-- 3 key questions and some answers based on the literature about negotiation
+-   3 key questions and some answers based on the literature about negotiation
 
-    + Be a consistent or adaptive negotiator?
-    
-        + Be a consistent negotiator
-        
-    + What is said early in the negotiation is important?
-    
-        + The first 5 minutes have a large effect on the negotiated agreements
-        
-    + Is more information always better?
-    
-        + Simply exchanging information does not automatically lead to better understanding of the other party’s preferences or to better negotiation outcomes
+    -   Be a consistent or adaptive negotiator?
+
+        -   Be a consistent negotiator
+
+    -   What is said early in the negotiation is important?
+
+        -   The first 5 minutes have a large effect on the negotiated agreements
+
+    -   Is more information always better?
+
+        -   Simply exchanging information does not automatically lead to better understanding of the other party’s preferences or to better negotiation outcomes
 
 # How People Communicate in Negotiation
 
-```{r }
-#| out-width: 100%
-#| fig-align: center
+##
 
-grViz(diagram = '
-      
-      digraph boxes_and_circles {
+```{dot}
+//| label: fig-aspect-on-how-people-communicate-in-negotiation
+//| fig-cap: Aspects on how people communicate in negotiation [@lewicki_negociacion_2024, pp 221-227]
+//| fig-width: 4.5
+//| fig-height: 2.5
+
+digraph boxes_and_circles {
       
       graph [rankdir = LR]
       
@@ -301,21 +297,20 @@ grViz(diagram = '
       "Pragmatic level" -> "Semantics (Meaning)";
       "Pragmatic level" -> "Syntax (Structure)";
       "Pragmatic level" -> "Style\n(Way of communicating)";
-      
-      }
-      
-      ')
+}
 ```
 
-# How to Improve Communication in Negotiation[^2]
+# How to Improve Communication in Negotiation
 
-```{r }
-#| out-width: 90%
-#| fig-align: center
+##
 
-grViz(diagram = '
-      
-      digraph boxes_and_circles {
+```{dot}
+//| label: fig-improving-communication-in-negotiation
+//| fig-cap: Improving communication in negotition [@lewicki_negociacion_2024, pp 230-234][^2]
+//| fig-width: 4.5
+//| fig-height: 2.5
+
+digraph boxes_and_circles {
       
       graph [rankdir = LR]
       
@@ -340,24 +335,23 @@ grViz(diagram = '
       
       "Use of\nQuestions" -> "Manageable\nQuestions";
       "Active\nlistening" -> "Origins:\nCarl R Rogers\nRichard Evans Farson";
-    
-      }
-      
-      ')
+}
 ```
 
 [^2]: For more information about active listening in the context of negotiation check out [@pon_staff_negotiation_2020] where active listening was developed by [@rogers_active_2015]
 
 # Acknowledgments
 
-- To my family that supports me
+##
 
-- To the taxpayers of Colombia and the __[UMNG students](https://www.umng.edu.co/estudiante)__ who pay my salary
+-   To my family that supports me
 
-- To the __[Business Science](https://www.business-science.io/)__ and __[R4DS Online Learning](https://www.rfordatasci.com/)__ communities where I learn __[R](https://www.r-project.org/about.html)__ 
+-   To the taxpayers of Colombia and the [**UMNG students**](https://www.umng.edu.co/estudiante) who pay my salary
 
-- To the __[R Core Team](https://www.r-project.org/contributors.html)__, the creators of __[RStudio IDE](https://rstudio.com/products/rstudio/)__, __[Quarto](https://quarto.org/)__ and the authors and maintainers of the packages __[tidyverse](https://CRAN.R-project.org/package=tidyverse)__, __[DiagrammeR](https://CRAN.R-project.org/package=DiagrammeR)__, __[knitr](https://CRAN.R-project.org/package=knitr)__, __[kableExtra](https://CRAN.R-project.org/package=kableExtra)__ and __[tinytex](https://CRAN.R-project.org/package=tinytex)__ for allowing me to access these tools without paying for a license
+-   To the [**Business Science**](https://www.business-science.io/) and [**R4DS Online Learning**](https://www.rfordatasci.com/) communities where I learn [**R**](https://www.r-project.org/about.html) and [**$\pi$-thon**](https://www.python.org/about/)
 
-- To the __[Linux kernel community](https://www.kernel.org/category/about.html)__ for allowing me the possibility to use some __[Linux distributions](https://static.lwn.net/Distributions/)__ as my main __[OS](https://en.wikipedia.org/wiki/Operating_system)__ without paying for a license
+-   To the [**R Core Team**](https://www.r-project.org/contributors.html), the creators of [**RStudio IDE**](https://rstudio.com/products/rstudio/), [**Quarto**](https://quarto.org/) and the authors and maintainers of the packages [**tidyverse**](https://CRAN.R-project.org/package=tidyverse), [**knitr**](https://CRAN.R-project.org/package=knitr) and [**tinytex**](https://CRAN.R-project.org/package=tinytex) for allowing me to access these tools without paying for a license
 
-# References
+-   To the [**Linux kernel community**](https://www.kernel.org/category/about.html) for allowing me the possibility to use some [**Linux distributions**](https://static.lwn.net/Distributions/) as my main [**OS**](https://en.wikipedia.org/wiki/Operating_system) without paying for a license
+
+# References {.allowframebreaks}
